--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "understrap-child",
+  "name": "tetaz-dev",
   "version": "1.2.0",
   "description": "Basic Child Theme for Understrap Theme Framework: https://github.com/understrap/understrap",
   "main": "index.js",
@@ -19,16 +19,19 @@
     "watch-run-css-dev": "nodemon --watch src/sass/ --ext scss --exec \"sass --style expanded --no-source-map --quiet src/sass/child-theme.scss:css/child-theme.css src/sass/child-theme.scss:css/child-theme.min.css\" --quiet",
     "watch-run-js": "nodemon --watch src/js/ --ext js --exec \"npm-run-all js\"",
     "copy-assets": "node src/build/copy-assets.js",
-    "dist": "npm-run-all --parallel css js",
+    "dist": "npm run dist-clean && npm run dist-build && gulp modifyStyleCSS",
     "dist-build": "node src/build/dist-build.js",
-    "dist-clean": "node src/build/dist-clean.js"
+    "dist-clean": "node src/build/dist-clean.js",
+    "build:dist": "node src/build/dist-clean.js && node src/build/dist-build.js",
+    "update:version": "gulp updateDevVersion",
+    "create:dist": "gulp createDistVersion"
   },
   "engines": {
     "node": ">=14"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/understrap/understrap-child.git"
+    "url": "https://github.com/understrap/tetaz-dev.git"
   },
   "keywords": [
     "wordpress",
@@ -40,7 +43,7 @@
   "author": "The Understrap Authors (https://github.com/understrap/understrap/graphs/contributors)",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/understrap/understrap-child/issues"
+    "url": "https://github.com/understrap/tetaz-dev/issues"
   },
   "homepage": "https://understrap.com",
   "devDependencies": {
@@ -60,6 +63,9 @@
     "clean-css-cli": "^5.6.1",
     "cross-env": "^7.0.3",
     "font-awesome": "^4.7.0",
+    "gulp": "^5.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
