--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.2",
     "browser-sync": "^2.27.10",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "browserslist": "^4.21.4",
     "caniuse-lite": "^1.0.30001430",
     "clean-css-cli": "^5.6.1",
